[package]
name = "solforge-case-study"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
url = "2.5.2"
solana-client = "1.17"
solana-sdk = "1.17"
solana-transaction-status = "1.17"
tokio = { version = "1.34", features = ["full"] }
tracing = "=0.1.40"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "fmt",
  "tracing-log",
  "json",
  "tracing",
] }
warp = "0.3.7"
chrono = "0.4.38"
