[package]
name = "solforge-case-study"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.4", features = ["derive"] }
serde = "1.0.209"
solana-client = "1.17"
solana-sdk = "1.17"
solana-transaction-status = "1.17"
tokio = { version = "1.34", features = ["full"] }
tracing = "=0.1.40"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "fmt",
  "tracing-log",
  "json",
  "tracing",
] }
url = "2.5.2"
warp = "0.3.7"
